open project when created success. disable okbutton when request new project

--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -49,7 +49,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
-                        ng-disabled="!modalNewProject.$dirty || (modalNewProject.$dirty && modalNewProject.$invalid)"
+                        ng-disabled="wiModal.disabled || !modalNewProject.$dirty || (modalNewProject.$dirty && modalNewProject.$invalid)"
                         ng-click="wiModal.onOkButtonClicked()">
                     <span class="ok-16x16"></span>&nbsp;OK
                 </button>
