--- a/source/dialogs/import-LAS/import-LAS-modal.html
+++ b/source/dialogs/import-LAS/import-LAS-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog modal-lg'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Load LAS file</h4>
                 <h5>Select File</h5>
             </div>
@@ -28,45 +28,47 @@
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="selectWell">Select Well</label>
                             <div class="col-sm-8">
-                                <select ng-model="wiModal.selectedWell" name="selectWell" value=""
-                                        class="form-control wi-form-control"
-                                        ng-options="x for x in wiModal.selectWell track by x"></select>
+                                <select name="selectWell" class="form-control wi-form-control"
+                                        ng-options="wellOption.name for wellOption in wiModal.projectLoaded.wells"
+                                        ng-model="wiModal.selectedWell">
+                                </select>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="topDepth">Top Depth</label>
                             <div class="col-sm-8">
-                                <input type="number" id="topDepth" value="" name="topDepth"
-                                       ng-model="topDepth" class="form-control wi-form-control" disabled>
+                                <input type="number" id="topDepth" name="topDepth"
+                                       value="{{wiModal.selectedWell.topDepth}}" class="form-control wi-form-control" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="bottomDepth">Bottom Depth</label>
                             <div class="col-sm-8">
-                                <input type="number" id="bottomDepth" value="" name="bottomDepth"
-                                       ng-model="bottomDepth" class="form-control wi-form-control" disabled>
+                                <input type="number" id="bottomDepth" name="bottomDepth"
+                                       ng-value="wiModal.selectedWell.bottomDepth" class="form-control wi-form-control" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="depthUnit">Depth Unit</label>
                             <div class="col-sm-8">
-                                <input type="text" id="depthUnit" value="" name="depthUnit"
+                                <input type="text" id="depthUnit" name="depthUnit"
                                        ng-model="depthUnit" class="form-control wi-form-control" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="wellStep">Well step</label>
                             <div class="col-sm-8">
-                                <input type="number" id="wellStep" value="" name="wellStep"
-                                       ng-model="wellStep" class="form-control wi-form-control" disabled>
+                                <input type="number" id="wellStep" name="wellStep"
+                                       value="{{wiModal.selectedWell.step}}" class="form-control wi-form-control" disabled>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="datasetName">Dataset Name</label>
                             <div class="col-sm-8">
-                                <select ng-model="wiModal.datasetName" name="datasetName" value=""
-                                        class="form-control wi-form-control"
-                                        ng-options="x for x in wiModal.datasetName track by x"></select>
+                                <select name="datasetName" class="form-control wi-form-control"
+                                        ng-options="datasetOption.name for datasetOption in wiModal.selectedWell.datasets"
+                                        ng-model="wiModal.selectedDataset">
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -75,7 +77,7 @@
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onLoadButtonClicked()'><span class="ok-16x16"></span>&nbsp;Load</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
